examples/test/testpolicy8661.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8661
  namespace: namespace387
spec:
  podSelector:
    matchLabels:
      key7: value28
      key37: value14
      key32: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value5
          key5: value6
          key35: value31
      podSelector:
        matchLabels:
          key29: value10
          key45: value20
          key27: value35
